--- a/style.css
+++ b/style.css
@@ -1,6 +1,24 @@
 body {
-    background-image: linear-gradient(to bottom, #051937, #004d7a, #008793, #00bf72, #a8eb12);
+    background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
+    background-size: 400% 400%;
+    animation: gradient 15s ease infinite;
+    height: 100vh;
 }
+
+@keyframes gradient {
+    0% {
+        background-position: 0% 50%;
+    }
+
+    50% {
+        background-position: 100% 50%;
+    }
+
+    100% {
+        background-position: 0% 50%;
+    }
+}
+
 
 .container {
     display: flex;
@@ -24,4 +42,30 @@ body {
 .quiz-answer:hover {
     cursor: pointer;
     background-color: azure;
+}
+
+.bg-success {
+    color: white;
+}
+
+.bg-danger {
+    color: white;
+}
+
+.width-100 {
+    width: 100%;
+}
+
+.text-center {
+    text-align: center;
+}
+
+.progress {
+    background-color: blue !important;
+    color: white !important;
+}
+
+.restart button {
+    width: 100%;
+    padding: 16px;
 }
